--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -121,11 +121,12 @@ h6 {
     transition: all 0.5s;
     z-index: 997;
     padding: 15px 0;
-    background: rgba(40, 58, 90, 0.9);
+    /* background: rgba(40, 58, 90, 0.9); */
 }
 
 #header.header-scrolled,
 #header.header-inner-pages {
+    /* background: rgba(40, 58, 90, 0.9); */
     background: rgba(40, 58, 90, 0.9);
 }
 
