--- a/public/assets/css/styleIndex.css
+++ b/public/assets/css/styleIndex.css
@@ -36,29 +36,29 @@ h6 {
 # Preloader
 --------------------------------------------------------------*/
 /* #preloader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 9999;
-    overflow: hidden;
-    background: #37517e;
+position: fixed;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+z-index: 9999;
+overflow: hidden;
+background: #37517e;
 }
 
 #preloader:before {
-    content: "";
-    position: fixed;
-    top: calc(50% - 30px);
-    left: calc(50% - 30px);
-    border: 6px solid #37517e;
-    border-top-color: #fff;
-    border-bottom-color: #fff;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    -webkit-animation: animate-preloader 1s linear infinite;
-    animation: animate-preloader 1s linear infinite;
+content: "";
+position: fixed;
+top: calc(50% - 30px);
+left: calc(50% - 30px);
+border: 6px solid #37517e;
+border-top-color: #fff;
+border-bottom-color: #fff;
+border-radius: 50%;
+width: 60px;
+height: 60px;
+-webkit-animation: animate-preloader 1s linear infinite;
+animation: animate-preloader 1s linear infinite;
 } */
 
 @-webkit-keyframes animate-preloader {
@@ -121,7 +121,7 @@ h6 {
     transition: all 0.5s;
     z-index: 997;
     padding: 15px 0;
-    background: rgba(40, 58, 90, 0.9);
+    /* background: rgba(40, 58, 90, 0.9); */
 }
 
 #header.header-scrolled,
@@ -158,7 +158,7 @@ h6 {
 # Navigation Menu
 --------------------------------------------------------------*/
 /**
-* Desktop Navigation 
+* Desktop Navigation
 */
 .navbar {
     padding: 0;
@@ -288,7 +288,7 @@ h6 {
 }
 
 /**
-* Mobile Navigation 
+* Mobile Navigation
 */
 .mobile-nav-toggle {
     color: #fff;
@@ -2713,9 +2713,9 @@ section {
     }
 
     /* .cta h2sip {
-    padding-top: -70px;
-    margin-top: -40px;
-  } */
+padding-top: -70px;
+margin-top: -40px;
+} */
 
     #hero {
         width: 100%;
