--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1878,10 +1878,10 @@ section {
         padding-top: 4px;
     }
 
-    /* iframe{
-        width: 30px;
+    iframe{
+        width: 330px;
         height: 500px;
-    } */
+    }
     /* h3 {
         font-size: 17px;
     } */
@@ -2733,10 +2733,10 @@ section {
         background: #37517e;
     }
 
-/* iframe{
-        width: 130px;
-        height: 500px;
-    } */
+    iframe{
+            width: 330px;
+            height: 500px;
+        }
 
 }
 
