--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -214,6 +214,26 @@ h6 {
     font-weight: 600;
 }
 
+.button-peta{
+    padding: 2px 5px;
+    /* margin-left: 30px; */
+    /* border-radius: 50px; */
+    color: black;
+    font-size: 14px;
+    /* border: 2px solid #47b2e4; */
+    font-weight: 600;
+}
+.button-peta:focus,
+.button-peta:hover {
+    padding: 2px 7px;
+    /* margin-left: 30px; */
+    border-radius: 50px;
+    color: #4682B4;
+    font-size: 14px;
+    border: 2px solid #47b2e4;
+    font-weight: 600;
+}
+
 .navbar .getstarted:hover,
 .navbar .getstarted:focus:hover {
     color: #fff;
@@ -2749,3 +2769,13 @@ iframe{
 
 }
 
+/*  tambahan*/
+.titlemaps{
+    color: #4682B4;
+    font-size: 24px;
+}
+
+.address-issues a{
+    color: #4682B4;
+    font-size: 16px;
+}
