--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -205,7 +205,7 @@ h6 {
 
 .navbar .getstarted,
 .navbar .getstarted:focus {
-    padding: 8px 20px;
+    padding: 4px 15px;
     margin-left: 30px;
     border-radius: 50px;
     color: #fff;
@@ -215,7 +215,7 @@ h6 {
 }
 
 .button-peta{
-    padding: 2px 5px;
+    padding: 2px 10px;
     /* margin-left: 30px; */
     /* border-radius: 50px; */
     color: black;
@@ -227,7 +227,7 @@ h6 {
 .button-peta:hover {
     padding: 2px 7px;
     /* margin-left: 30px; */
-    border-radius: 50px;
+    border-radius: 20px;
     color: #4682B4;
     font-size: 14px;
     border: 2px solid #47b2e4;
@@ -2778,4 +2778,62 @@ iframe{
 .address-issues a{
     color: #4682B4;
     font-size: 16px;
+}
+
+/*--------------------------------------------------------------
+# Departments
+--------------------------------------------------------------*/
+.departments {
+  overflow: hidden;
+}
+.departments .nav-tabs {
+  border: 0;
+}
+.departments .nav-link {
+  border: 0;
+  padding: 12px 15px 12px 0;
+  transition: 0.3s;
+  color: #2c4964;
+  border-radius: 0;
+  border-right: 2px solid #ebf1f6;
+  font-weight: 600;
+  font-size: 15px;
+}
+.departments .nav-link:hover {
+  color: #1977cc;
+}
+.departments .nav-link.active {
+  color: #1977cc;
+  border-color: #1977cc;
+  text-st
+}
+.departments .tab-pane.active {
+  -webkit-animation: fadeIn 0.5s ease-out;
+  animation: fadeIn 0.5s ease-out;
+}
+.departments .details h3 {
+  font-size: 26px;
+  font-weight: 600;
+  margin-bottom: 20px;
+  color: #2c4964;
+}
+.departments .details p {
+  color: #777777;
+}
+.departments .details p:last-child {
+  margin-bottom: 0;
+}
+@media (max-width: 992px) {
+  .departments .nav-link {
+    border: 0;
+    padding: 15px;
+  }
+  .departments .nav-link.active {
+    color: #fff;
+    background: #1977cc;
+  }
+}
+
+.departments .tab-content .row{
+    padding-bottom: 50px;
 }
