--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -218,8 +218,9 @@ h6 {
     padding: 2px 10px;
     /* margin-left: 30px; */
     /* border-radius: 50px; */
-    color: black;
+    color: #4682B4;
     font-size: 14px;
+    text-decoration: underline;
     /* border: 2px solid #47b2e4; */
     font-weight: 600;
 }
@@ -230,6 +231,7 @@ h6 {
     border-radius: 20px;
     color: #4682B4;
     font-size: 14px;
+    
     border: 2px solid #47b2e4;
     font-weight: 600;
 }
