--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2791,7 +2791,7 @@ iframe{
 }
 
 /*--------------------------------------------------------------
-# Departments
+# Departmentss
 --------------------------------------------------------------*/
 .departments {
   overflow: hidden;
