--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2849,9 +2849,9 @@ iframe{
 }
 
 @media (min-width: 361px){
-    .why-us-option2{
+    /* .why-us-option2{
         display: none;
-    }
+    } */
 }
 
 /* test */
