--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -214,7 +214,7 @@ h6 {
 }
 
 .button-peta{
-    padding: 2px 10px;
+    /* padding: 2px 10px; */
     /* margin-left: 30px; */
     /* border-radius: 50px; */
     color: #4682B4;
@@ -232,6 +232,28 @@ h6 {
     font-size: 14px;
     
     border: 2px solid #47b2e4;
+    font-weight: 600;
+}
+
+.button-peta-mobile{
+    /* padding: 2px 10px; */
+    margin-left: -30px;
+    /* border-radius: 50px; */
+    color: #4682B4;
+    font-size: 14px;
+    text-decoration: underline;
+    /* border: 2px solid #47b2e4; */
+    font-weight: 600;
+}
+.button-peta-mobile:focus,
+.button-peta-mobile:hover {
+    padding: 2px 7px;
+    /* margin-left: 30px; */
+    border-radius: 20px;
+    color: #3bdbff;
+    font-size: 14px;
+    
+    /* border: 2px solid #47b2e4; */
     font-weight: 600;
 }
 
@@ -663,6 +685,9 @@ section {
 /*--------------------------------------------------------------
 # About Us
 --------------------------------------------------------------*/
+.about{
+    padding-left: -200px;
+}
 .about .content h3 {
     font-weight: 600;
     font-size: 26px;
@@ -2017,7 +2042,9 @@ section {
 # Blog
 --------------------------------------------------------------*/
 .blog {
-    padding: 40px 0 20px 0;
+    width: 100%;
+    /* padding: 40px 0 20px 0; */
+    padding-left: -1000px;
 }
 
 .blog .entry {
@@ -2849,140 +2876,9 @@ iframe{
 }
 
 @media (min-width: 361px){
-    .why-us-optional2{
+    .faq{
         display: none;
     }
 }
 
 /* test */
-
-/*--------------------------------------------------------------
-# Why Us
---------------------------------------------------------------*/
-.why-us-optional2 .content {
-    padding: 60px 100px 0 100px;
-}
-
-.why-us-optional2 .content h3 {
-    font-weight: 400;
-    font-size: 34px;
-    color: #37517e;
-}
-
-.why-us-optional2 .content h4 {
-    font-size: 20px;
-    font-weight: 700;
-    margin-top: 5px;
-}
-
-.why-us-optional2 .content p {
-    font-size: 15px;
-    color: #848484;
-}
-
-.why-us-optional2 .img {
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center center;
-}
-
-.why-us-optional2 .accordion-list {
-    padding: 0 100px 60px 100px;
-}
-
-.why-us-optional2 .accordion-list ul {
-    padding: 0;
-    list-style: none;
-}
-
-.why-us-optional2 .accordion-list li+li {
-    margin-top: 15px;
-}
-
-.why-us-optional2 .accordion-list li {
-    padding: 20px;
-    background: #fff;
-    border-radius: 4px;
-}
-
-.why-us-optional2 .accordion-list a {
-    display: block;
-    position: relative;
-    font-family: "Poppins", sans-serif;
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 500;
-    padding-right: 30px;
-    outline: none;
-    cursor: pointer;
-}
-
-.why-us-optional2 .accordion-list span {
-    color: #47b2e4;
-    font-weight: 600;
-    font-size: 18px;
-    padding-right: 10px;
-}
-
-.why-us-optional2 .accordion-list i {
-    font-size: 24px;
-    position: absolute;
-    right: 0;
-    top: 0;
-}
-
-.why-us-optional2 .accordion-list p {
-    margin-bottom: 0;
-    padding: 10px 0 0 0;
-}
-
-.why-us-optional2 .accordion-list .icon-show {
-    display: none;
-}
-
-.why-us-optional2 .accordion-list a.collapsed {
-    color: #343a40;
-}
-
-.why-us-optional2 .accordion-list a.collapsed:hover {
-    color: #47b2e4;
-}
-
-.why-us-optional2 .accordion-list a.collapsed .icon-show {
-    display: inline-block;
-}
-
-.why-us-optional2 .accordion-list a.collapsed .icon-close {
-    display: none;
-}
-
-@media (max-width: 1024px) {
-
-    .why-us-optional2 .content,
-    .why-us-optional2 .accordion-list {
-        padding-left: 0;
-        padding-right: 0;
-    }
-}
-
-@media (max-width: 992px) {
-    .why-us-optional2 .img {
-        min-height: 400px;
-    }
-
-    .why-us-optional2 .content {
-        padding-top: 30px;
-    }
-
-    .why-us-optional2 .accordion-list {
-        padding-bottom: 30px;
-    }
-}
-
-@media (max-width: 575px) {
-    .why-us-optional2 .img {
-        min-height: 200px;
-    }
-}
-
-
