update style niws

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2836,6 +2836,7 @@ iframe{
   font-weight: 600;
   font-size: 15px;
 }
+/* d */
 .departments .nav-link:hover {
   color: #1977cc;
 }
@@ -2881,4 +2882,4 @@ iframe{
     }
 }
 
-/* test */
+/* test ancore*/
