--- a/public/assets/css/styleAwal.css
+++ b/public/assets/css/styleAwal.css
@@ -115,7 +115,8 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-# Header
+# Header ancore
+dfd
 --------------------------------------------------------------*/
 #header {
     transition: all 0.5s;
