--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2806,6 +2806,18 @@ iframe{
 
 }
 
+@media (min-width:361px) {
+
+iframe{
+        width: 1200px;
+        height: 800px;
+    }
+    /* .departments{
+        display: none;
+    } */
+
+}
+
 /*  tambahan*/
 .titlemaps{
     color: #4682B4;
