--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2799,6 +2799,7 @@ section {
 iframe{
         width: 330px;
         height: 500px;
+        padding-top: 40px;
     }
     .departments{
         display: none;
@@ -2811,6 +2812,7 @@ iframe{
 iframe{
         width: 1200px;
         height: 800px;
+        padding-top: 40px;
     }
     /* .departments{
         display: none;ssss
